# arbitrage-bot

./: .gitignore  SETUP.md
contracts/: FlashTipping.sol  MakerDAOMintWrapper.sol  TriangularArbExecutorV3.sol  UniswapV4Executor.sol
frontend/: next.config.js  package.json
frontend/components/: ArbDashboard.tsx  LiquidityBubbleMap.tsx  Mempool3DVisualizer.tsx  WalletConnector.tsx
frontend/lib/: NoSSR.tsx  store.ts  types.ts
frontend/pages/: index.tsx
frontend/styles/: globals.css
rust-engine/: Cargo.toml
rust-engine/src/: bundler.rs  cex_hedger.rs  listener.rs  main.rs  math.rs  simulator.rs  solver.rs
