[package]
name = "arb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
alloy = { version = "0.12", features = ["providers", "provider-ws", "pubsub", "sol-types", "rpc", "signers", "signer-local", "rpc-client-ws", "transport-ws", "reqwest", "reqwest-rustls-tls"] }
revm = "19"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ruint = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
tiny-keccak = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
